--- a/public/_assets/scss/layouts/_page.scss
+++ b/public/_assets/scss/layouts/_page.scss
@@ -71,7 +71,7 @@
         gap: var(--spacing-100);
 
         height: 100vh;
-        padding: var(--spacing-200) var(--spacing-200) 0 var(--spacing-200);
+        padding: var(--spacing-100) var(--spacing-200);
 
         //         &__navi {
         //             @include layout-border();
